# DQN_ATARY

./: .gitignore  README.md  main.py  pyproject.toml
classic_control/:  CS4287-Prj2-22372199_ID2.ipynb  README.md
notebook/: CS4287-Assignment-2-Deep-Reinforcment-Learning.py
notebook/metrics_output/: metrics_report.json
notebook/tensorboard_logs/DQN_1/: events.out.tfevents.1765865134.crimsion.45387.0
notebook/tensorboard_logs/DQN_2/: events.out.tfevents.1765866544.crimsion.47550.0
notebook/tensorboard_logs/DQN_3/: events.out.tfevents.1765867105.crimsion.2376.0
notebook/tensorboard_logs/DQN_4/: events.out.tfevents.1765867124.crimsion.2376.1
notebook/tensorboard_logs/DQN_5/: events.out.tfevents.1765901259.crimsion.58853.0
notebook/tensorboard_logs/DQN_6/: events.out.tfevents.1765901344.crimsion.58853.1
notebook/tensorboard_logs/DQN_7/: events.out.tfevents.1765902971.crimsion.66306.0
option_pain/: .suffer_here  REPORT_GUIDE.md  generate_report.py  metrics.py  plots.py  train.py
option_pain/metrics_output/: metrics_report.json
option_pain/models_1m/logs/: evaluations.npz
option_pain/tensorboard_logs/DQN_1/: events.out.tfevents.1764817913.archlinux.89048.0
option_pain/tensorboard_logs/DQN_2/: events.out.tfevents.1764818701.archlinux.91291.0
option_pain/tensorboard_logs/DQN_3/: events.out.tfevents.1764819981.archlinux.92952.0
option_pain/tensorboard_logs/DQN_4/: events.out.tfevents.1764820418.archlinux.107497.0
