[project]
name = "dqn-atary"
version = "0.1.0"
description = "dont read this, no one does"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "box2d>=2.3.10",
    "gymnasium[atari,classic-control,other]>=1.2.2",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "marimo>=0.18.4",
    "stable-baselines3[extra]>=2.7.0",
]
